--- a/src/client/less/agency.less
+++ b/src/client/less/agency.less
@@ -246,7 +246,7 @@ section {
 
 // Portfolio Section
 
-#portfolio {
+.portfolio {
     .portfolio-item {
         margin: 0 0 15px;
         right: 0;
