added timer to header section (need to fix layout)

--- a/src/client/less/agency.less
+++ b/src/client/less/agency.less
@@ -185,6 +185,26 @@ header {
 			font-size: 50px;
 			line-height: 50px;
 			margin-bottom: 25px;
+		  	list-style: none;
+		  	ul {
+			  width: 540px;
+			  margin-right: auto;
+			  margin-left: auto;
+			  list-style-type: none;
+			  float: none!important;
+			  li {
+				margin: 5px;
+				width: 115px;
+				background-color: rgba(255, 255, 255, 0.1);
+				float: left;
+				padding-right: 3px;
+				padding-left: 3px;
+				p {
+				  padding-left: 10px;
+				  text-align: left;
+				}
+			  }
+			}
 		}
 	}
 }
