--- a/src/client/less/agency.less
+++ b/src/client/less/agency.less
@@ -548,6 +548,9 @@ aside.clients {
 }
 
 // Contact Section
+.captcha-spacer {
+  height : 15px;
+}
 
 section#contact {
 	background-color: @gray-darkest;
@@ -557,6 +560,7 @@ section#contact {
 	.section-heading {
 		color: white;
 	}
+
 	.form-group {
 		margin-bottom: 25px;
 		input,
