--- a/src/client/less/agency.less
+++ b/src/client/less/agency.less
@@ -259,6 +259,11 @@ section {
 
 // Services Section
 
+#map {
+  width: 480px;
+  height: 400px;
+}
+
 .service-heading {
 	margin: 15px 0;
 	text-transform: none;
