--- a/src/client/less/agency.less
+++ b/src/client/less/agency.less
@@ -185,26 +185,19 @@ header {
 			font-size: 50px;
 			line-height: 50px;
 			margin-bottom: 25px;
-		  	list-style: none;
-		  	ul {
-			  width: 540px;
-			  margin-right: auto;
-			  margin-left: auto;
-			  list-style-type: none;
-			  float: none!important;
-			  li {
+			display: flex;
+			justify-content: center;
+			&>div {
 				margin: 5px;
 				width: 115px;
 				background-color: rgba(255, 255, 255, 0.1);
-				float: left;
 				padding-right: 3px;
 				padding-left: 3px;
 				p {
-				  padding-left: 10px;
-				  text-align: left;
+				 	padding-left: 10px;
+				 	text-align: left;
 				}
-			  }
-			}
+			 }
 		}
 	}
 }
@@ -226,7 +219,7 @@ header {
 				font-weight: 700;
 				font-size: 75px;
 				line-height: 75px;
-				margin-bottom: 50px;
+				margin-bottom: 15px;
 			}
 		}
 	}
